--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,8 @@
   <artifactId>jtreetable</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>jtreetable</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>JTreeTable</name>
+  <url>https://github.com/parubok/jtreetable</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
