--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
+  <scm>
+    <connection>scm:git:git@github.com:parubok/jtreetable</connection>
+    <url>scm:git:git@github.com:parubok/jtreetable</url>
+    <developerConnection>scm:git:git@github.com:parubok/jtreetable</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
   <dependencies>
   </dependencies>
 
