--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>treetable</groupId>
   <artifactId>jtreetable</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>JTreeTable</name>
   <url>https://github.com/parubok/jtreetable</url>
@@ -20,7 +20,7 @@
     <connection>scm:git:git@github.com:parubok/jtreetable</connection>
     <url>scm:git:git@github.com:parubok/jtreetable</url>
     <developerConnection>scm:git:git@github.com:parubok/jtreetable</developerConnection>
-    <tag>jtreetable-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
